# imagestego

./: #1#input.txt  .appveyor.yml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  OVERVIEW.md  README.md  _CMakeLists.txt  count_lines.sh  input.txt
.github/workflows/: macos.yml  release.yml  ubuntu.yml  windows.yml
ci/: arm64-build.sh  travis-build.sh  travis-install-deps.sh  travis-upload-coverage.sh
cmake/: CPackConfig.cmake  FindOpenCV.cmake  imagestego-compiler-features.cmake  imagestego-cxx-compiler.cmake  imagestego-install.cmake  imagestego-simd-detection.cmake
cmake/Hunter/: config.cmake
cmake/checks/: cpu_avx2.cpp  cpu_avx512bw.cpp  cpu_avx512vl.cpp  cpu_neon.cpp  cpu_sse2.cpp  cpu_ssse3.cpp
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
examples/: CMakeLists.txt  archived_data_stego.cpp  avl.cpp  bitarray.cpp  dwt.cpp  example.cpp  haar_wavelet.cpp  huffman.cpp  jsteg.cpp  lsb.cpp  lsb_embed.cpp  lsb_extract.cpp  lsb_huffman_embed.cpp  lsb_huffman_extract.cpp
include/: bitarray.hpp  core.hpp  decoder.hpp  encoder.hpp  huffman_decoder.hpp  huffman_encoder.hpp  imagestego.hpp  lzw_encoder.hpp
include/algorithms/: base_interfaces.hpp  basic_interfaces.hpp  dwt.hpp  jpeg_lsb.hpp  lsb.hpp  lsb_stego.hpp
include/imagestego/: algorithm.hpp  algorithms.hpp  compression.hpp  core.hpp  imagestego.hpp  keygen.hpp  space_check.hpp
include/imagestego/algorithms/: dwt.hpp  f3.hpp  f5.hpp  jpeg_lsb.hpp  lsb.hpp
include/imagestego/compression/: huffman_decoder.hpp  huffman_encoder.hpp  lzw_decoder.hpp  lzw_dictionary.hpp  lzw_encoder.hpp
include/imagestego/utils/: avl_tree.hpp  binary_tree.hpp  bitarray.hpp  format_checker.hpp  jpeg_image.hpp  jpeg_permutation.hpp  jpeg_processor.hpp  matrix.hpp  permutation.hpp  size_checker.hpp
include/utils/: avl_tree.hpp  binary_tree.hpp  bintree.hpp  bitarray.hpp  jpeg.hpp  jpeg_processor.hpp
modules/compression/: CMakeLists.txt
modules/compression/include/imagestego/: compression.hpp
modules/compression/include/imagestego/compression/: huffman.hpp  huffman_decoder.hpp  huffman_encoder.hpp  lzw.hpp  lzw_decoder.hpp  lzw_dictionary.hpp  lzw_encoder.hpp
modules/compression/src/: huffman_decoder.cpp  huffman_encoder.cpp  lzw_decoder.cpp  lzw_dictionary.cpp  lzw_encoder.cpp
modules/compression/test/: huffman.cpp  lzw.cpp
modules/core/: CMakeLists.txt
modules/core/include/imagestego/: core.hpp
modules/core/include/imagestego/core/: avl_tree.hpp  bitarray.hpp  bitarrayimpl.hpp  config.hpp  exception.hpp  export.hpp  interfaces.hpp  intrinsic.hpp  route.hpp  types.hpp
modules/core/include/imagestego/utils/: avl_tree.hpp  binary_tree.hpp  format_checker.hpp
modules/core/src/: avl_tree.cpp  bitarray.cpp  bitarrayimpl.cpp  core.cpp  exception.cpp  intrinsic.cpp  route.cpp
modules/core/test/: avl.cpp  bitarray.cpp  intrinsic.cpp  route.cpp
modules/jpeg/: CMakeLists.txt
modules/jpeg/include/imagestego/algorithms/: f3.hpp  jpeg_lsb.hpp
modules/jpeg/include/imagestego/utils/: jpeg_image.hpp
modules/jpeg/src/: f3.cpp  jpeg_image.cpp  jpeg_lsb.cpp
modules/lossless/: CMakeLists.txt
modules/lossless/include/imagestego/algorithm/: dwt.hpp  lsb.hpp
modules/lossless/include/imagestego/algorithms/: dwt.hpp  lsb.hpp
modules/lossless/src/: avl_tree.hpp  dwt.cpp  lsb.cpp  route.cpp  route.hpp
modules/lossless/test/: avl.cpp  lsb.cpp  route.cpp
modules/wavelet/: CMakeLists.txt
modules/wavelet/include/imagestego/algorithm/: wavelet.hpp
modules/wavelet/include/imagestego/wavelet/: haar.hpp  haar_fast.hpp  interfaces.hpp
modules/wavelet/perf/: haar.cpp
modules/wavelet/src/: haar.c  haar.cpp  haar.h  haar.hpp  haar_fast.cpp  inverse_haar.c  inverse_haar.h  inverse_haar.hpp  lifting.c  lifting.h  wavelet.cpp
modules/wavelet/test/: haar.cpp  wavelet.cpp
scripts/: build.sh  coverage.sh  install-deps.sh
src/: .jpeg_lsb.cpp.swp  avl_tree.cpp  base_interfaces.cpp  basic_interfaces.cpp  core.cpp  decoder.cpp  dwt.cpp  encoder.cpp  f3.cpp  f5.cpp  format_checker.cpp  huffman_decoder.cpp  hufman_decoder.cpp  hufman_encoder.cpp  imagestego.cpp  jpeg.cpp  jpeg_image.cpp  jpeg_lsb.cpp  jpeg_permutation.cpp  jpeg_processor.cpp  keygen.cpp  lsb.cpp  lsb_stego.cpp  lzw_decoder.cpp  lzw_dictionary.cpp  lzw_encoder.cpp  main.cpp  permutation.cpp  space_check.cpp  stego.cpp
src/test/: avl.cpp  bitarray.cpp  f3.cpp  f5.cpp  huffman.cpp  lzw.cpp  permutation.cpp  prefix.cpp  stego.cpp
test/: avl.cpp  bitarray.cpp  huffman.cpp  jpeg.cpp  lzw.cpp  shuffle.cpp  stego.cpp  test_avl  test_bitarray  test_huffman  test_prefix
